e2e/npd/fixtures/testdata/mock-commands/dns-coredns/iptables-save-real-aks
#!/bin/bash
# Mock iptables-save with real AKS iptables output format
case "$*" in
    *"-t nat"*)
        cat <<END
# Generated by iptables-save v1.8.7 on Wed Oct  1 17:42:05 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [398301:30275106]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A KUBE-SERVICES -d 10.0.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.0.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -j KUBE-SVC-ERIFXISQEP7F7OF4
COMMIT
# Completed on Wed Oct  1 17:42:05 2025
END
        ;;
    *)
        echo "Mock iptables-save: unknown args: $*" >&2
        exit 1
        ;;
esac
