e2e/npd/fixtures/testdata/mock-commands/dns-coredns/iptables-save-success
#!/bin/bash
# Mock iptables-save for CoreDNS service IP discovery
case "$*" in
    *"-t nat"*)
        cat <<END
# Generated by iptables-save v1.8.4 on Mon Jul 15 10:00:00 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A KUBE-SERVICES -d 10.0.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.0.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns-tcp"
COMMIT
# Completed on Mon Jul 15 10:00:00 2025
END
        ;;
    *)
        echo "Mock iptables-save: unknown args: $*" >&2
        exit 1
        ;;
esac
